src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-2.snap
---
source: src/mail_parser.rs
expression: "parse_single_line_comment(\"%ble\\n\")"
---
Ok(
    (
        "\n",
        (),
    ),
)
