src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-3.snap
---
source: src/mail_parser.rs
expression: "split_on_comment(\"C%bla\\n\")"
---
Ok(
    (
        "\n",
        [
            "C",
        ],
    ),
)
