src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-4.snap
---
source: src/mail_parser.rs
expression: "clean_comments(\"C%bla\\n\")"
---
Ok(
    (
        "",
        "C\n",
    ),
)
