src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-5.snap
---
source: src/mail_parser.rs
expression: "clean_comments(\"C%bla\\nSDD%bla2\\n\")"
---
Ok(
    (
        "",
        "C\nSDD\n",
    ),
)
