src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-6.snap
---
source: src/mail_parser.rs
expression: "clean_comments(\"C%bla\\n\\nN1\")"
---
Ok(
    (
        "",
        "C\n\nN1",
    ),
)
