src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work-7.snap
---
source: src/mail_parser.rs
expression: "clean_comments(\"COOR_3D  %bla\\n\\nN1\")"
---
Ok(
    (
        "",
        "COOR_3D  \n\nN1",
    ),
)
