src/snapshots/patro_mesh__mail_parser__tests__comment_eraser_should_work.snap
---
source: src/mail_parser.rs
expression: "peol_comment(\"%bla\")"
---
Ok(
    (
        "",
        (),
    ),
)
