src/snapshots/patro_mesh__mail_parser__tests__end_section_parser_should_work-2.snap
---
source: src/mail_parser.rs
expression: "end_section_tag(\"TINSF\")"
---
Err(
    Error(
        Error {
            input: "TINSF",
            code: Tag,
        },
    ),
)
